code for home and optional timestamp

--- a/grewpy/html/index.html
+++ b/grewpy/html/index.html
@@ -39,7 +39,7 @@
   <div id="app" class="example-wrapper">
     <div class="row" style="width: 100%; margin: auto">
       <div class="col-sm-2">
-        <a href="./list.html"><i class="fa-solid fa-house"></i></a> • Updated <span id="update_ago"></span>
+        <a v-bind:href="home"><i class="fa-solid fa-house"></i></a><span id="update_ago"></span>
       </div>
       <div class="col-sm-2">
         <div class="input-group input-group-sm mb-3">
