--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -9,11 +9,24 @@
 <h1 id="grew-tables">Grew tables</h1>
 <h2 id="parseme">Parseme</h2>
 <ul>
-<li>usage of tags per languages: <a
-href="index.html?data=parseme/labels@1.3">version 1.3</a> • <a
-href="index.html?data=parseme/labels@master">master</a></li>
-<li>validation: <a href="index.html?data=parseme/valid@1.3">version
-1.3</a> • <a href="index.html?data=parseme/valid@master">master</a></li>
+<li>usage of tags per languages:
+<ul>
+<li><a href="index.html?data=parseme/labels@1.2">version 1.2</a></li>
+<li><a href="index.html?data=parseme/labels@1.3">version 1.3</a></li>
+<li>? <a href="index.html?data=parseme/labels@master">master</a></li>
+</ul></li>
+<li>validation:
+<ul>
+<li><a href="index.html?data=parseme/valid@1.3">version 1.3</a></li>
+<li><a href="index.html?data=parseme/valid@1.2">version 1.2</a></li>
+<li>? <a href="index.html?data=parseme/valid@master">master</a></li>
+</ul></li>
+<li>sizes:
+<ul>
+<li><a href="index.html?data=sizes/valid@1.3">version 1.3</a></li>
+<li><a href="index.html?data=sizes/valid@1.2">version 1.2</a></li>
+<li>? <a href="index.html?data=sizes/valid@master">master</a></li>
+</ul></li>
 </ul>
 <h2
 id="relating-upos-or-extpos-to-the-dependency-relation-with-the-head">Relating
@@ -33,6 +46,11 @@ which UPOS</h2>
 <ul>
 <li><a
 href="index.html?data=SUD_French-GSD/pos_features@2.12">SUD_French-GSD</a></li>
+</ul>
+<h2 id="misc">MISC</h2>
+<ul>
+<li><a href="index.html?data=sud/subrel">subrel</a></li>
+<li><a href="index.html?data=sud/deep">deep</a></li>
 </ul>
   </body>
 </html>
