--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -41,11 +41,11 @@ with more than one UPOS</h2>
 <li><a
 href="index.html?data=SUD_French-GSD/amb_lemma@2.12">SUD_French-GSD</a></li>
 </ul>
-<h2 id="what-feature-is-used-on-which-upos">What feature is used on
-which UPOS</h2>
+<h2 id="what-feature-is-used-on-which-upos-2.13">What feature is used on
+which UPOS 2.13</h2>
 <ul>
 <li><a
-href="index.html?data=SUD_French-GSD/pos_features@2.12">SUD_French-GSD</a></li>
+href="index.html?data=SUD_French-GSD/pos_features@2.13">SUD_French-GSD</a></li>
 </ul>
 <h2 id="misc">MISC</h2>
 <ul>
