Fix links for treebanks with enhanced deps

--- a/tables/index.html
+++ b/tables/index.html
@@ -72,7 +72,7 @@
             <div class="alert alert-danger" role="alert" v-if='alert != ""' v-html="alert"></div>
 
             <p>This page proposes a set of tables which describe the global usage of dependency relations, features and
-              feature values in the treebanks from the <a href="http://universaldependencies.org/">UD</a> and <a href="https://surfacesyntacticud.github.io/">SUD</a> projects (version 2.13).</p>
+              feature values in the treebanks from the <a href="http://universaldependencies.org/">UD</a> and <a href="https://surfacesyntacticud.github.io/">SUD</a> projects (version 2.14).</p>
       
             <p>See the 
               <a href="https://github.com/surfacesyntacticud/tools/blob/master/tables/README.md">README</a>
@@ -206,7 +206,7 @@
         <button 
           type="button"
           data-toggle="tooltip"
-          title="Universal deps: without taking subtypes into account (nsubj and nsubj:pass are in the same columns)" 
+          title="Universal deps: without taking subtypes into account (nsubj and nsubj:pass are in the same column)" 
           class="btn btn-sm"
           :class="{ 'btn-warning': table=='UDEPS', 'btn-secondary' : table!='UDEPS' }">
           UDEPS
@@ -243,7 +243,7 @@
         <button
           type="button" 
           data-toggle="tooltip"
-          title="Universal deps: without taking subtypes into account (nsubj and nsubj:pass are in the same columns)" 
+          title="Universal deps: without taking subtypes into account (nsubj and nsubj:pass are in the same column)"
           class="btn btn-sm" 
           :class="{ 'btn-warning': table=='UDEPS', 'btn-secondary' : table!='UDEPS' }">
           UDEPS
