review observation tables

--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -13,19 +13,19 @@
 <ul>
 <li><a href="index.html?data=parseme/labels@1.2">version 1.2</a></li>
 <li><a href="index.html?data=parseme/labels@1.3">version 1.3</a></li>
-<li>? <a href="index.html?data=parseme/labels@master">master</a></li>
+<li><a href="index.html?data=parseme/labels@latest">latest</a></li>
 </ul></li>
 <li>validation:
 <ul>
 <li><a href="index.html?data=parseme/valid@1.3">version 1.3</a></li>
 <li><a href="index.html?data=parseme/valid@1.2">version 1.2</a></li>
-<li>? <a href="index.html?data=parseme/valid@master">master</a></li>
+<li><a href="index.html?data=parseme/valid@latest">latest</a></li>
 </ul></li>
 <li>sizes:
 <ul>
-<li><a href="index.html?data=sizes/valid@1.3">version 1.3</a></li>
-<li><a href="index.html?data=sizes/valid@1.2">version 1.2</a></li>
-<li>? <a href="index.html?data=sizes/valid@master">master</a></li>
+<li><a href="index.html?data=parseme/sizes@1.3">version 1.3</a></li>
+<li><a href="index.html?data=parseme/sizes@1.2">version 1.2</a></li>
+<li><a href="index.html?data=parseme/sizes@latest">latest</a></li>
 </ul></li>
 </ul>
 <h2
@@ -33,19 +33,19 @@ id="relating-upos-or-extpos-to-the-dependency-relation-with-the-head">Relating
 UPOS (or ExtPos) to the dependency relation with the head</h2>
 <ul>
 <li><a
-href="index.html?data=SUD_French-GSD/label_upos@2.12">SUD_French-GSD</a></li>
+href="index.html?data=SUD_French-GSD/label_upos@2.15">SUD_French-GSD</a></li>
 </ul>
 <h2 id="lemmas-which-appear-with-more-than-one-upos">Lemmas which appear
 with more than one UPOS</h2>
 <ul>
 <li><a
-href="index.html?data=SUD_French-GSD/amb_lemma@2.12">SUD_French-GSD</a></li>
+href="index.html?data=SUD_French-GSD/amb_lemma@2.15">SUD_French-GSD</a></li>
 </ul>
-<h2 id="what-feature-is-used-on-which-upos-2.13">What feature is used on
-which UPOS 2.13</h2>
+<h2 id="what-feature-is-used-on-which-upos-2.15">What feature is used on
+which UPOS 2.15</h2>
 <ul>
 <li><a
-href="index.html?data=SUD_French-GSD/pos_features@2.13">SUD_French-GSD</a></li>
+href="index.html?data=SUD_French-GSD/pos_features@2.15">SUD_French-GSD</a></li>
 </ul>
 <h2 id="misc">MISC</h2>
 <ul>
