--- a/tables/index.html
+++ b/tables/index.html
@@ -139,7 +139,7 @@
                   <div class="card">
                     <div class="card-header">Features in Spoken_UD ({{count["SP_ud_feats"]}} tables)</div>
                     <div class="card-body" style="text-align: center;">
-                      <img src="https://freepngimg.com/thumb/web_design/26904-1-speaking-file.png" style="height: 50px;" alt="UD">
+                      <img src="https://grew.fr/download/SP/Logo_SP.jpg" style="height: 50px;" alt="Spoken UD logo">
                     </div>
                   </div>
                 </a>
@@ -149,7 +149,7 @@
                   <div class="card">
                     <div class="card-header">Metadata in Spoken_UD ({{count["SP_meta"]}} table)</div>
                     <div class="card-body" style="text-align: center;">
-                      <img src="https://freepngimg.com/thumb/web_design/26904-1-speaking-file.png" style="height: 50px;" alt="UD">
+                      <img src="https://grew.fr/download/SP/Logo_SP.jpg" style="height: 50px;" alt="Spoken UD logo">
                     </div>
                   </div>
                 </a>
@@ -159,7 +159,7 @@
                   <div class="card">
                     <div class="card-header">Dependencies in Spoken_UD ({{count["SP_ud_deps"]}} tables)</div>
                     <div class="card-body" style="text-align: center;">
-                      <img src="https://freepngimg.com/thumb/web_design/26904-1-speaking-file.png" style="height: 50px;" alt="UD">
+                      <img src="https://grew.fr/download/SP/Logo_SP.jpg" style="height: 50px;" alt="Spoken UD logo">
                     </div>
                   </div>
                 </a>
