update tables for 2.17

--- a/tables/index.html
+++ b/tables/index.html
@@ -72,7 +72,7 @@
             <div class="alert alert-danger" role="alert" v-if='alert != ""' v-html="alert"></div>
 
             <p>This page proposes a set of tables which describe the global usage of dependency relations, features and
-              feature values in the treebanks from the <a href="http://universaldependencies.org/">UD</a> and <a href="https://surfacesyntacticud.github.io/">SUD</a> projects.</p>
+              feature values in the treebanks from the <a href="http://universaldependencies.org/">UD</a> and <a href="https://surfacesyntacticud.org/">SUD</a> projects.</p>
       
             <p>See the 
               <a href="https://github.com/surfacesyntacticud/tools/blob/master/tables/README.md">README</a>
@@ -82,7 +82,7 @@
               <a href="https://github.com/surfacesyntacticud/tools/tree/master/tables">Github project</a>.
              </p>
 
-            <p>Pick one of the four collections below for all (S)UD treebanks (version 2.16):</p>
+            <p>Pick one of the four collections below for all (S)UD treebanks (version 2.17):</p>
 
              <div class="row" style="margin-bottom: 20px;">
               <div class="col-sm-6">
@@ -100,7 +100,7 @@
                   <div class="card">
                     <div class="card-header">Dependencies in SUD ({{count["sud_deps"]}} tables)</div>
                     <div class="card-body" style="text-align: center;">
-                      <img src="https://surfacesyntacticud.github.io/images/sud.svg" style="height: 50px;" alt="SUD">
+                      <img src="https://surfacesyntacticud.org/images/sud.svg" style="height: 50px;" alt="SUD">
                     </div>
                   </div>
                 </a>
